--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     margin: 0px;
-    padding: 40px;
+    padding: 100px 40px;
 }
 
 .info-right {
